--- a/03-infinite-scroll/index.html
+++ b/03-infinite-scroll/index.html
@@ -21,7 +21,7 @@
             <div class="search"><i class="fa-solid fa-magnifying-glass"></i></div>
         </header>
         <div class="video">
-            <video src="" autoplay muted></video>
+            <video src="src/0.mp4" autoplay muted></video>
             <div class="info">
                 <p class="username">Binland</p>
                 <p class="description">
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="video">
-            <video src="" autoplay muted></video>
+            <video src="src/1.mp4" autoplay muted></video>
             <div class="info">
                 <p class="username">Binland</p>
                 <p class="description">
@@ -87,7 +87,7 @@
             </div>
         </div>
         <div class="video">
-            <video src="" autoplay muted></video>
+            <video src="src/2.mp4" autoplay muted></video>
             <div class="info">
                 <p class="username">Binland</p>
                 <p class="description">
@@ -123,7 +123,7 @@
     </div>
     <template id="template">
         <div class="video">
-            <video src="" autoplay muted loop></video>
+            <video src="src/3.mp4" autoplay muted loop></video>
             <div class="info">
                 <p class="username">Binland</p>
                 <p class="description">
